# BusCrowdRisk-KOR

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  공공데이터_분석모델_구현보고서.md  공공데이터_분석모델_일반인용_보고서.md  데이터수집_결측보정_운영전략.md  데이터전처리_용인5000계열.md  레포_업로드_체크리스트.md  만차위험도_계산설계.md  모델검증_고도화_진행계획.md
example-db/: README.md  baseline_metrics.json  baseline_model_metrics.csv  bus_location_snapshot.csv  data_quality_report.json  external_air_quality_hourly.csv  external_event_daily.csv  external_holiday_daily.csv  external_traffic_hourly.csv  external_weather_hourly.csv  feature_summary_by_route_time.csv  model_hourly_features.csv  model_summary_by_route_time.csv  model_target_labels.csv  preprocessed_location_features.csv  route_station.csv  route_station_summary.csv  station_demand_daily.csv  station_expected_boardings_hourly.csv  target_route.csv  training_dataset.csv
scripts/: build_example_db.py
src/busseat_ai/: api.py  cli.py  config.py  demand.py  external_context.py  modeling.py  preprocessing.py  quality.py  targets.py
src/busseat_ai/clients/: __init__.py  airkorea.py  gbis.py  kasi.py  key_probe.py  kma.py  public_data.py  tourapi.py
src/busseat_ai/importers/: __init__.py  sureing_mysql_dump.py
src/busseat_ai/services/: __init__.py  risk.py  weather.py
src/busseat_ai/storage/: __init__.py  database.py  schema.sql
tests/: test_demand_modeling.py  test_external_context.py  test_live_schedule_fallback.py  test_preprocessing.py  test_public_data.py  test_risk.py  test_sureing_import.py  test_targets.py  test_weather.py
